// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) App should render correctly with no result 1`] = `
<main
  className="App-main-1"
>
  <div
    className="MuiGrid-container-4 MuiGrid-spacing-xs-24-27"
  >
    <div
      className="MuiGrid-item-5 MuiGrid-grid-sm-4-46"
    >
      <h1
        className="MuiTypography-root-94 MuiTypography-headline-99 App-title-2"
      >
        <span>
          Appstore search
        </span>
         
        <a
          className="App-link-3"
          href="https://github.com/baptooo/algolia-appstore/releases/tag/vtest"
          target="_blank"
        >
          v
          test
        </a>
      </h1>
      <img
        alt=""
        src="https://www.algolia.com/static_assets/images/press/downloads/algolia-logo-light.svg"
        width="120"
      />
    </div>
    <div
      className="MuiGrid-item-5 MuiGrid-grid-sm-8-50"
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-121 Search-textField-119"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="MuiFormLabel-root-130 MuiInputLabel-root-125 MuiInputLabel-formControl-126 MuiInputLabel-animated-129"
            data-shrink={false}
            htmlFor={undefined}
          >
            Search for an app by name
          </label>
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete="off"
              autoFocus={undefined}
              className="MuiInput-input-143"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name="term"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value={undefined}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-46"
    />
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-50"
    >
      <section>
        <h1
          className="MuiTypography-root-94 MuiTypography-headline-99"
        >
          0
           results
        </h1>
        <button
          className="MuiButtonBase-root-166 MuiButton-root-151"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-152"
          >
            Clear 
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-168"
            >
              clear_all
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-174"
          />
        </button>
      </section>
    </div>
  </div>
</main>
`;

exports[`(Component) App should render correctly with results 1`] = `
<main
  className="App-main-1"
>
  <div
    className="MuiGrid-container-4 MuiGrid-spacing-xs-24-27"
  >
    <div
      className="MuiGrid-item-5 MuiGrid-grid-sm-4-46"
    >
      <h1
        className="MuiTypography-root-94 MuiTypography-headline-99 App-title-2"
      >
        <span>
          Appstore search
        </span>
         
        <a
          className="App-link-3"
          href="https://github.com/baptooo/algolia-appstore/releases/tag/vtest"
          target="_blank"
        >
          v
          test
        </a>
      </h1>
      <img
        alt=""
        src="https://www.algolia.com/static_assets/images/press/downloads/algolia-logo-light.svg"
        width="120"
      />
    </div>
    <div
      className="MuiGrid-item-5 MuiGrid-grid-sm-8-50"
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-121 Search-textField-119"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="MuiFormLabel-root-130 MuiInputLabel-root-125 MuiInputLabel-formControl-126 MuiInputLabel-animated-129"
            data-shrink={false}
            htmlFor={undefined}
          >
            Search for an app by name
          </label>
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete="off"
              autoFocus={undefined}
              className="MuiInput-input-143"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name="term"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value={undefined}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-4-46"
    >
      <div
        className="Facets-facet-148"
      >
        <h2
          className="MuiTypography-root-94 MuiTypography-headline-99 Facets-title-149"
        >
          facet-0
          <span
            className="Facets-chip-150"
          />
        </h2>
        <div
          className="MuiFormControl-root-121"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "minWidth": "100%",
            }
          }
        >
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <div
              className="MuiSelect-root-181"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-182 MuiSelect-selectMenu-183 MuiInput-input-143"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Choose a 
                facet-0
              </div>
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="facet-facet-0"
                name="facet-0"
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-186 MuiSelect-icon-185"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Facets-facet-148"
      >
        <h2
          className="MuiTypography-root-94 MuiTypography-headline-99 Facets-title-149"
        >
          facet-1
          <span
            className="Facets-chip-150"
          />
        </h2>
        <div
          className="MuiFormControl-root-121"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "minWidth": "100%",
            }
          }
        >
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <div
              className="MuiSelect-root-181"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-182 MuiSelect-selectMenu-183 MuiInput-input-143"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Choose a 
                facet-1
              </div>
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="facet-facet-1"
                name="facet-1"
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-186 MuiSelect-icon-185"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Facets-facet-148"
      >
        <h2
          className="MuiTypography-root-94 MuiTypography-headline-99 Facets-title-149"
        >
          facet-2
          <span
            className="Facets-chip-150"
          />
        </h2>
        <div
          className="MuiFormControl-root-121"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "minWidth": "100%",
            }
          }
        >
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <div
              className="MuiSelect-root-181"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-182 MuiSelect-selectMenu-183 MuiInput-input-143"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Choose a 
                facet-2
              </div>
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="facet-facet-2"
                name="facet-2"
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-186 MuiSelect-icon-185"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Facets-facet-148"
      >
        <h2
          className="MuiTypography-root-94 MuiTypography-headline-99 Facets-title-149"
        >
          facet-3
          <span
            className="Facets-chip-150"
          />
        </h2>
        <div
          className="MuiFormControl-root-121"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "minWidth": "100%",
            }
          }
        >
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <div
              className="MuiSelect-root-181"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-182 MuiSelect-selectMenu-183 MuiInput-input-143"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Choose a 
                facet-3
              </div>
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="facet-facet-3"
                name="facet-3"
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-186 MuiSelect-icon-185"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Facets-facet-148"
      >
        <h2
          className="MuiTypography-root-94 MuiTypography-headline-99 Facets-title-149"
        >
          facet-4
          <span
            className="Facets-chip-150"
          />
        </h2>
        <div
          className="MuiFormControl-root-121"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "minWidth": "100%",
            }
          }
        >
          <div
            className="MuiInput-root-135 MuiInput-formControl-136 MuiInput-underline-139"
          >
            <div
              className="MuiSelect-root-181"
            >
              <div
                aria-haspopup="true"
                aria-owns={null}
                aria-pressed="false"
                className="MuiSelect-select-182 MuiSelect-selectMenu-183 MuiInput-input-143"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Choose a 
                facet-4
              </div>
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                defaultValue={undefined}
                id="facet-facet-4"
                name="facet-4"
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="hidden"
                value=""
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-186 MuiSelect-icon-185"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-8-50"
    >
      <section>
        <h1
          className="MuiTypography-root-94 MuiTypography-headline-99"
        >
          4
           results
        </h1>
      </section>
      <ul
        className="MuiList-root-202 MuiList-padding-203"
      >
        <div
          className="Results-item-196"
        >
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-216 Results-avatar-197"
            />
            <div
              className="MuiListItemText-root-219"
            >
              <h3
                className="MuiTypography-root-94 MuiTypography-subheading-101 MuiListItemText-primary-222"
              >
                <span>
                  app-0
                </span>
              </h3>
              <p
                className="MuiTypography-root-94 MuiTypography-body1-103 MuiTypography-colorTextSecondary-116 MuiListItemText-secondary-223"
              >
                <span>
                  app-0
                </span>
              </p>
            </div>
            <div
              className="Results-price-198"
            >
              <div
                className="MuiChip-root-226"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-231"
                />
              </div>
            </div>
          </li>
          <hr
            className="MuiDivider-root-233"
          />
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <span
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "direction": "ltr",
                  "display": "inline-block",
                }
              }
            >
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
            </span>
            <span
              className="MuiTypography-root-94 MuiTypography-caption-104"
            >
              (
               votes)
            </span>
            <div
              className="Results-install-200"
            >
              <button
                className="MuiButtonBase-root-166 MuiButton-root-151 MuiButton-sizeSmall-163"
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-152"
                >
                  Install
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 Results-icon-201"
                  >
                    file_download
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-174"
                />
              </button>
            </div>
          </li>
        </div>
        <div
          className="Results-item-196"
        >
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-216 Results-avatar-197"
            />
            <div
              className="MuiListItemText-root-219"
            >
              <h3
                className="MuiTypography-root-94 MuiTypography-subheading-101 MuiListItemText-primary-222"
              >
                <span>
                  app-1
                </span>
              </h3>
              <p
                className="MuiTypography-root-94 MuiTypography-body1-103 MuiTypography-colorTextSecondary-116 MuiListItemText-secondary-223"
              >
                <span>
                  app-1
                </span>
              </p>
            </div>
            <div
              className="Results-price-198"
            >
              <div
                className="MuiChip-root-226"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-231"
                />
              </div>
            </div>
          </li>
          <hr
            className="MuiDivider-root-233"
          />
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <span
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "direction": "ltr",
                  "display": "inline-block",
                }
              }
            >
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
            </span>
            <span
              className="MuiTypography-root-94 MuiTypography-caption-104"
            >
              (
               votes)
            </span>
            <div
              className="Results-install-200"
            >
              <button
                className="MuiButtonBase-root-166 MuiButton-root-151 MuiButton-sizeSmall-163"
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-152"
                >
                  Install
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 Results-icon-201"
                  >
                    file_download
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-174"
                />
              </button>
            </div>
          </li>
        </div>
        <div
          className="Results-item-196"
        >
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-216 Results-avatar-197"
            />
            <div
              className="MuiListItemText-root-219"
            >
              <h3
                className="MuiTypography-root-94 MuiTypography-subheading-101 MuiListItemText-primary-222"
              >
                <span>
                  app-2
                </span>
              </h3>
              <p
                className="MuiTypography-root-94 MuiTypography-body1-103 MuiTypography-colorTextSecondary-116 MuiListItemText-secondary-223"
              >
                <span>
                  app-2
                </span>
              </p>
            </div>
            <div
              className="Results-price-198"
            >
              <div
                className="MuiChip-root-226"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-231"
                />
              </div>
            </div>
          </li>
          <hr
            className="MuiDivider-root-233"
          />
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <span
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "direction": "ltr",
                  "display": "inline-block",
                }
              }
            >
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
            </span>
            <span
              className="MuiTypography-root-94 MuiTypography-caption-104"
            >
              (
               votes)
            </span>
            <div
              className="Results-install-200"
            >
              <button
                className="MuiButtonBase-root-166 MuiButton-root-151 MuiButton-sizeSmall-163"
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-152"
                >
                  Install
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 Results-icon-201"
                  >
                    file_download
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-174"
                />
              </button>
            </div>
          </li>
        </div>
        <div
          className="Results-item-196"
        >
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-216 Results-avatar-197"
            />
            <div
              className="MuiListItemText-root-219"
            >
              <h3
                className="MuiTypography-root-94 MuiTypography-subheading-101 MuiListItemText-primary-222"
              >
                <span>
                  app-3
                </span>
              </h3>
              <p
                className="MuiTypography-root-94 MuiTypography-body1-103 MuiTypography-colorTextSecondary-116 MuiListItemText-secondary-223"
              >
                <span>
                  app-3
                </span>
              </p>
            </div>
            <div
              className="Results-price-198"
            >
              <div
                className="MuiChip-root-226"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-231"
                />
              </div>
            </div>
          </li>
          <hr
            className="MuiDivider-root-233"
          />
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <span
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "direction": "ltr",
                  "display": "inline-block",
                }
              }
            >
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
            </span>
            <span
              className="MuiTypography-root-94 MuiTypography-caption-104"
            >
              (
               votes)
            </span>
            <div
              className="Results-install-200"
            >
              <button
                className="MuiButtonBase-root-166 MuiButton-root-151 MuiButton-sizeSmall-163"
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-152"
                >
                  Install
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 Results-icon-201"
                  >
                    file_download
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-174"
                />
              </button>
            </div>
          </li>
        </div>
        <div
          className="Results-item-196"
        >
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-216 Results-avatar-197"
            />
            <div
              className="MuiListItemText-root-219"
            >
              <h3
                className="MuiTypography-root-94 MuiTypography-subheading-101 MuiListItemText-primary-222"
              >
                <span>
                  app-4
                </span>
              </h3>
              <p
                className="MuiTypography-root-94 MuiTypography-body1-103 MuiTypography-colorTextSecondary-116 MuiListItemText-secondary-223"
              >
                <span>
                  app-4
                </span>
              </p>
            </div>
            <div
              className="Results-price-198"
            >
              <div
                className="MuiChip-root-226"
                onClick={undefined}
                onKeyDown={[Function]}
                role="button"
                tabIndex={-1}
              >
                <span
                  className="MuiChip-label-231"
                />
              </div>
            </div>
          </li>
          <hr
            className="MuiDivider-root-233"
          />
          <li
            className="MuiListItem-root-206 MuiListItem-default-209 MuiListItem-gutters-213"
            disabled={false}
          >
            <span
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "direction": "ltr",
                  "display": "inline-block",
                }
              }
            >
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
              <span
                onClick={[Function]}
                onMouseMove={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                style={
                  Object {
                    "cursor": "auto",
                    "display": "inline-block",
                    "position": "relative",
                  }
                }
              >
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-168 MuiIcon-colorDisabled-172"
                >
                  star
                </span>
                <span
                  style={
                    Object {
                      "display": "inline-block",
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "top": 0,
                      "width": "0%",
                    }
                  }
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 MuiIcon-colorPrimary-169"
                  >
                    star
                  </span>
                </span>
              </span>
            </span>
            <span
              className="MuiTypography-root-94 MuiTypography-caption-104"
            >
              (
               votes)
            </span>
            <div
              className="Results-install-200"
            >
              <button
                className="MuiButtonBase-root-166 MuiButton-root-151 MuiButton-sizeSmall-163"
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-152"
                >
                  Install
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-168 Results-icon-201"
                  >
                    file_download
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-174"
                />
              </button>
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</main>
`;
